k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-loadbalancer
  namespace: todolist
spec:
  selector:
    app: todolist-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
