k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-service
  namespace: todolist
spec:
  selector:
    app: todolist-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
